--- a/deploy/cloudformation/static-host-pipeline.yml
+++ b/deploy/cloudformation/static-host-pipeline.yml
@@ -51,6 +51,12 @@ Parameters:
     Type: String
     Description: The name of the CloudFormation stack that created the test static host
 
+  NameTag:
+    Type: String
+    Description: The value to add for the "Name" tag. This should share a value with all stacks associated with this project
+    AllowedPattern: ".+-.+(-.+)*"
+    ConstraintDescription: "Name should match the pattern [infra]-{service}{-etc}. Ex: archives-rr-image-webcomponent-pipeline"
+
 Outputs:
 
   PipelineName:
@@ -161,13 +167,6 @@ Resources:
             Value: !Ref AWS::AccountId
           - Name: PIPELINE_NAME
             Value: !Ref NameTag
-      Tags:
-        - Key: Name
-          Value: !Ref NameTag
-        - Key: Owner
-          Value: !Ref OwnerTag
-        - Key: Contact
-          Value: !Ref ContactTag
 
   CodeTestDeployRole:
     Type: AWS::IAM::Role
@@ -330,13 +329,6 @@ Resources:
           - Name: DEST_BUCKET
             Value:
               Fn::ImportValue: !Join [':', [!Ref TestStackName, 'BucketName']]
-      Tags:
-        - Key: Name
-          Value: !Ref NameTag
-        - Key: Owner
-          Value: !Ref OwnerTag
-        - Key: Contact
-          Value: !Ref ContactTag
 
   CodeProdDeployer:
     Type: 'AWS::CodeBuild::Project'
@@ -374,24 +366,10 @@ Resources:
           - Name: DEST_BUCKET
             Value:
               Fn::ImportValue: !Join [':', [!Ref ProdStackName, 'BucketName']]
-      Tags:
-        - Key: Name
-          Value: !Ref NameTag
-        - Key: Owner
-          Value: !Ref OwnerTag
-        - Key: Contact
-          Value: !Ref ContactTag
 
   CodeS3Bucket:
     Type: AWS::S3::Bucket
     Properties:
-      Tags:
-        - Key: Name
-          Value: !Ref NameTag
-        - Key: Owner
-          Value: !Ref OwnerTag
-        - Key: Contact
-          Value: !Ref ContactTag
       BucketEncryption:
         ServerSideEncryptionConfiguration:
           - ServerSideEncryptionByDefault:
