--- a/deploy/cloudformation/static-host-pipeline.yml
+++ b/deploy/cloudformation/static-host-pipeline.yml
@@ -143,10 +143,15 @@ Resources:
               commands:
                 - echo Beginning post build on `date`
                 - ${BuildScriptsDir}/post_build.sh
+                - printf $CODEBUILD_RESOLVED_SOURCE_VERSION > ${BuildOutputDir}/sha.txt
           artifacts:
             base-directory: ${BuildOutputDir}
             files:
               - '**/*'
+          # secondary-artifacts:
+          #   artifact1:
+          #     files:
+          #       - sha.txt
 
       Artifacts:
         Type: CODEPIPELINE
@@ -239,7 +244,26 @@ Resources:
       ManagedPolicyArns:
         - arn:aws:iam::aws:policy/AWSCodeBuildDeveloperAccess
         - arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryPowerUser
+        - !ImportValue ReadESUPolicy
       Policies:
+        -
+          PolicyName: "AllowGetParameters"
+          PolicyDocument:
+            Version: '2012-10-17'
+            Statement:
+              Action: ssm:GetParameters
+              Effect: Allow
+              Resource:
+                Fn::Join:
+                - ""
+                -
+                  - "arn:aws:ssm:"
+                  -
+                    Ref: "AWS::Region"
+                  - ":"
+                  -
+                    Ref: "AWS::AccountId"
+                  - ":*"
         -
           PolicyName: "AllowCloudWatchLogsForCodeBuild"
           PolicyDocument:
@@ -309,7 +333,7 @@ Resources:
                 - aws s3 rm s3://$DEST_BUCKET --recursive
             build:
               commands:
-                - aws s3 cp --recursive . s3://$DEST_BUCKET/
+                - aws s3 cp --recursive . s3://$DEST_BUCKET/ --exclude "sha.txt"
 
       Artifacts:
         Type: CODEPIPELINE
@@ -344,10 +368,15 @@ Resources:
             pre_build:
               commands:
                 - aws s3 rm s3://$DEST_BUCKET --recursive
+
             build:
               commands:
-                - aws s3 cp --recursive . s3://$DEST_BUCKET/
-
+                - SOURCE_SHA=$(cat sha.txt)
+                - aws s3 cp --recursive . s3://$DEST_BUCKET/ --exclude "sha.txt"
+                - DATE=$(date)
+            post_build:
+              commands:
+                - curl -i -X POST -H "Authorization:token ${OAUTH_TOKEN}" "https://api.github.com/repos/ndlib/archives-rr/statuses/${SOURCE_SHA}" -d "{\"state\":\"success\",\"description\":\"Deployed to production on ${DATE}\",\"context\":\"${CODEBUILD_INITIATOR}\",\"target_url\":\"https://url_to_production\"}"
       Artifacts:
         Type: CODEPIPELINE
       Environment:
@@ -358,6 +387,9 @@ Resources:
           - Name: DEST_BUCKET
             Value:
               Fn::ImportValue: !Join [':', [!Ref ProdStackName, 'BucketName']]
+          - Name: OAUTH_TOKEN
+            Type: PARAMETER_STORE
+            Value: /esu/github/ndlib-git/oauth
 
   CodeS3Bucket:
     Type: AWS::S3::Bucket
