ESU-721 further scope of parameter store

--- a/deploy/cloudformation/static-host-pipeline.yml
+++ b/deploy/cloudformation/static-host-pipeline.yml
@@ -259,7 +259,7 @@ Resources:
                   - ":"
                   -
                     Ref: "AWS::AccountId"
-                  - ":*"
+                  - ":parameter/esu/github/*"
         -
           PolicyName: "AllowCloudWatchLogsForCodeBuild"
           PolicyDocument:
