--- a/deploy/cloudformation/static-host.yml
+++ b/deploy/cloudformation/static-host.yml
@@ -188,10 +188,15 @@ Resources:
       ManagedPolicyArns:
         - arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
 
-  DefaultDirectoryIndexLambda:
+  SPARedirectionLambda:
     Type: "AWS::Lambda::Function"
     Properties:
       Code:
+        # This Lambda will take incoming web requests and adjust the request URI as appropriate.
+        # Any requests for assets under the "/static" path will be passed along as originally sent.
+        # Requests that start with "faviocn.ico" and "manifest.json" will also be passed
+        # To "/favicon.ico" and "manifest.json" as appropriate. If the request does not match any
+        # of these, the request will ne routed to "/index.html" for entry into the SPA
         ZipFile: >
           'use strict';
           exports.handler = (event, context, callback) => {
@@ -214,7 +219,7 @@ Resources:
                   return callback(null, request);
               }
           };
-      Description: Basic rewrite rule to send directory requests such as */ to */index.html
+      Description: Basic rewrite rule to send directory requests to appropriate locations in the SPA
       Handler: index.handler
       Role: !GetAtt LambdaEdgeBasicExecutionRole.Arn
       Runtime: nodejs8.10
