--- a/deploy/cloudformation/static-host-pipeline.yml
+++ b/deploy/cloudformation/static-host-pipeline.yml
@@ -127,6 +127,8 @@ Resources:
 
           phases:
             install:
+              runtime-versions:
+                nodejs: 12.x
               commands:
                 - echo Install started on `date`
                 - chmod -R 755 ${BuildScriptsDir}/*
@@ -154,7 +156,7 @@ Resources:
       Environment:
         Type: LINUX_CONTAINER
         ComputeType: BUILD_GENERAL1_SMALL
-        Image: aws/codebuild/nodejs:10.1.0
+        Image: aws/codebuild/standard:4.0
         EnvironmentVariables:
           - Name: AWS_DEFAULT_REGION
             Value: !Ref AWS::Region
@@ -306,6 +308,9 @@ Resources:
           version: 0.2
 
           phases:
+            install:
+              runtime-versions:
+                nodejs: 12.x
             pre_build:
               commands:
                 - aws s3 rm s3://$DEST_BUCKET --recursive
@@ -318,7 +323,7 @@ Resources:
       Environment:
         Type: LINUX_CONTAINER
         ComputeType: BUILD_GENERAL1_SMALL
-        Image: aws/codebuild/ubuntu-base:14.04
+        Image: aws/codebuild/standard:4.0
         EnvironmentVariables:
           - Name: DEST_BUCKET
             Value:
@@ -343,6 +348,9 @@ Resources:
           version: 0.2
 
           phases:
+            install:
+              runtime-versions:
+                nodejs: 12.x
             pre_build:
               commands:
                 - aws s3 rm s3://$DEST_BUCKET --recursive
@@ -360,7 +368,7 @@ Resources:
       Environment:
         Type: LINUX_CONTAINER
         ComputeType: BUILD_GENERAL1_SMALL
-        Image: aws/codebuild/ubuntu-base:14.04
+        Image: aws/codebuild/standard:4.0
         EnvironmentVariables:
           - Name: DEST_BUCKET
             Value:
